# dcmtk_tutorial

./: .gitmodules  CMakeLists.txt  README.md
.chglog/: config.yml
.github/workflows/: linux.yml  windows.yml
doc/: 0.build_dcmtk.md  1.echo_scu.md
res/: cert.pem  cert.pfx  cert_public.pem  client.crt  client.key  client_ca.pem  client_cert.pem  client_key.pem  key.pem  server.crt  server.key  server_ca.pem  server_cert.pem  server_key.pem
src/: 1.echo_scu.cpp  2.find_scu.cpp  3.get_scu.cpp  4.store_scp.cpp  CMakeLists.txt  log.hpp  tls_helper.hpp  utility.hpp
